--- a/index.html
+++ b/index.html
@@ -1,6 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta http-equiv="Refresh" content="0;url=https://vtube.to/o8s3tewoz8a9.html">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vids</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            display: block;
+            padding: 10px 15px;
+            background-color: #007bff;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        a:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
+<body>
+    <div class="container">
+        <h1>Link Collection</h1>
+        <ul>
+            <li><a href="https://photos.app.goo.gl/h6hNuFsMSXPwTKLX7">Utahjaz</a></li>
+            <li><a href="https://photos.app.goo.gl/NZHQryz1RE1amaXN7">Waifumia</a></li>
+            <li><a href="https://photos.app.goo.gl/Kmdozahqj2rpYVwYA">avanicks</a></li>
+            <li><a href="https://photos.app.goo.gl/UZaHcBaKStPpoViW7">wetmelons</a></li>
+            <li><a href="https://photos.app.goo.gl/ayTNXDDqPLZMNGHGA">Brenda Trindade</a></li>
+            <li><a href="https://photos.app.goo.gl/t74W8HyAQyGMcCN3A">Emily Norman</a></li>
+            <li><a href="https://photos.app.goo.gl/7hsPJDaMWpJjbexNA">Valerie Kay</a></li>
+            <li><a href="https://photos.app.goo.gl/7hsPJDaMWpJjbexNA">Lizzi69</a></li>
+            <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">Dakotajade</a></li>
+            <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">Milla Santos</a></li>
+            <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">Mz Dani</a></li>
+            <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">P</a></li>
+            <li><a href="https://photos.app.goo.gl/FLMGwYjAuU3cYSfx7">Vikingbarbie</a></li>
+            <li><a href="https://photos.app.goo.gl/wh6RDNSp5ATM8H519">Collections</a></li>
+            <li><a href="https://photos.app.goo.gl/2wCgoY3TzvZvQqbdA">Fanbus</a></li>
+            <li><a href="https://photos.app.goo.gl/bT9a5f1q3B4rgjyY7">Morgpie</a></li>
+            <li><a href="https://photos.app.goo.gl/4YKNKw8QSv1fPANVA">Collection2</a></li>
+            <li><a href="https://photos.app.goo.gl/Us9ooYVaixAtc1rEA">Collection3</a></li>
+            <li><a href="https://photos.app.goo.gl/JGn1HcBrVwdAcy6W9">Collection4</a></li>
+            <li><a href="https://photos.app.goo.gl/jYw8szy8DCpNzjEJ7">Collection5</a></li>
+            <li><a href="https://photos.app.goo.gl/vLZYW1ha2nGsBi7L9">Collection6</a></li>
+            <li><a href="https://photos.app.goo.gl/bu1QUszvF6tTs3fK7">Collection7</a></li>
+            <li><a href="https://photos.app.goo.gl/g2umGYVCB4KzEtYo8">Collection8</a></li>
+            <li><a href="https://photos.app.goo.gl/xk1vYvvuYr7LrbVu6">Collection9</a></li>
+            <li><a href="https://photos.app.goo.gl/iRxDSnNY4YbGFj3u9">Collection10</a></li>
+        </ul>
+    </div>
+</body>
 </html>
