--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <li><a href="https://photos.app.goo.gl/7hsPJDaMWpJjbexNA">Valerie Kay</a></li>
             <li><a href="https://photos.app.goo.gl/7hsPJDaMWpJjbexNA">Lizzi69</a></li>
             <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">Dakotajade</a></li>
-            <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">Milla Santos</a></li>
-            <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">Mz Dani</a></li>
-            <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">P</a></li>
+            <li><a href="https://photos.app.goo.gl/yZNwD4oyAsg1fw2V6">Milla Santos</a></li>
+            <li><a href="https://photos.app.goo.gl/6Wzz8xEjRnsJjesh7">Mz Dani</a></li>
+            <li><a href="https://photos.app.goo.gl/xNPyh5PwsD8WzqyZ9">P</a></li>
             <li><a href="https://photos.app.goo.gl/FLMGwYjAuU3cYSfx7">Vikingbarbie</a></li>
             <li><a href="https://photos.app.goo.gl/wh6RDNSp5ATM8H519">Collections</a></li>
             <li><a href="https://photos.app.goo.gl/2wCgoY3TzvZvQqbdA">Fanbus</a></li>
