--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <li><a href="https://photos.app.goo.gl/ayTNXDDqPLZMNGHGA">Brenda Trindade</a></li>
             <li><a href="https://photos.app.goo.gl/t74W8HyAQyGMcCN3A">Emily Norman</a></li>
             <li><a href="https://photos.app.goo.gl/7hsPJDaMWpJjbexNA">Valerie Kay</a></li>
-            <li><a href="https://photos.app.goo.gl/7hsPJDaMWpJjbexNA">Lizzi69</a></li>
+            <li><a href="https://photos.app.goo.gl/zz9y5zZXWpdK4Lxt8">Lizzi69</a></li>
             <li><a href="https://photos.app.goo.gl/41G5wgDzxYg3rb9B9">Dakotajade</a></li>
             <li><a href="https://photos.app.goo.gl/yZNwD4oyAsg1fw2V6">Milla Santos</a></li>
             <li><a href="https://photos.app.goo.gl/6Wzz8xEjRnsJjesh7">Mz Dani</a></li>
