--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <li><a href="https://photos.app.goo.gl/g2umGYVCB4KzEtYo8">Collection8</a></li>
             <li><a href="https://photos.app.goo.gl/xk1vYvvuYr7LrbVu6">Collection9</a></li>
             <li><a href="https://photos.app.goo.gl/iRxDSnNY4YbGFj3u9">Collection10</a></li>
+            <li><a href="https://photos.app.goo.gl/fC7DbvAALZM6sczb9">Collection11</a></li>
         </ul>
     </div>
 </body>
