--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <li><a href="https://photos.app.goo.gl/xk1vYvvuYr7LrbVu6">Collection9</a></li>
             <li><a href="https://photos.app.goo.gl/iRxDSnNY4YbGFj3u9">Collection10</a></li>
             <li><a href="https://photos.app.goo.gl/fC7DbvAALZM6sczb9">Collection11</a></li>
+            <li><a href="https://photos.app.goo.gl/jziScYGhGkWFBwmM9">Collection12</a></li>
         </ul>
     </div>
 </body>
